# hardware_hacking_writeups

./: README.md
I2C/: CMakeLists.txt  README.md  compile_commands.json
I2C/include/: i2c.h
I2C/src/: i2c.c  main.c
TL-WR841N/: README.md
